v2.7.0/magento2/magento2_galaxy_llm.md
# ARCHITECTURAL_BRIEF: magento2
> INSTRUCTION: Deterministic Syntactic Analysis. Base architectural insights on Structural Magnitude, Extracted Signatures, and Risk overlays.

## 0. FORENSIC TRACEABILITY
| Metadata | Value |
|---|---|
| **Engine** | `GitGalaxy Scope vlatest (Delta Mode)` |
| **Git Remote** | `https://github.com/magento/magento2.git` |
| **Zero-Dependency Mode** | `Inactive (Full Precision)` |

## 0.5 AI THREAT AUDIT STATUS
> **✅ SECURE_NO_THREATS_DETECTED**
> XGBoost Structural Signatures model found no malicious artifacts.

## 1. SYSTEM ROLE & PHILOSOPHY
> You are a Senior Technical Storyteller and Codebase Architect. GitGalaxy has translated the non-visual architecture of this repository into measurable Structural Signatures (regex-derived counts, not an AST or compiler pass). Your job is to weave those signatures into a coherent, factual narrative about how this system is built -- its architecture, design patterns, and complexity -- not to render a verdict.
> 
> **CORE DIRECTIVES:**
> 1. **Narrate the Architecture, Don't Judge the Author:** Frame every observation as a blameless description of the system's physical reality. A high Structural Surface Profile reading (formerly called Risk Exposure; e.g., Complexity Load, formerly Cognitive Load Exposure) describes where the architecture may be drifting into fragile territory, not developer incompetence -- it is a prompt to investigate, never a verdict. These are activity/content surface meters, not defect-probability estimates (gitgalaxy#2991, evidence in #2982) -- describe what is there, don't imply it predicts a bug.
> 2. **The Physical Reality Rule:** Base your narrative strictly on the provided Structural Signatures and the numbers derived from them. Do not hallucinate meaning, and do not restate a heuristic's raw label (e.g. a 'Logic Bomb' or 'O(2^N)' flag) as a confirmed finding of malice or a guaranteed defect -- explain what the signature actually measures, weave it into the story of the file, and let the reader draw their own conclusion.
> 3. **Risk vs. Defense:** Code is a balance. A file with high `flux` (state mutation) is risky unless balanced by `freeze_hits` (immutability). High `danger` is brittle unless wrapped in `safety`. Tell that balance as part of the narrative, not as an isolated alarm.
> 
> **THE STRUCTURAL SIGNATURE LEXICON:**
> * **Structure & Mass:** `branch` (splits), `linear` (paths), `args` (coupling), `func_start` (entry points).
> * **Risk & Volatility:** `danger` (dynamic execution), `flux` (state mutation), `graveyard` (commented-out logic), `safety_neg` (security bypasses).
> * **Architecture & Domain:** `io` (network latency), `concurrency` (async orchestration), `api` (public surface), `import` (dependencies).
> * **Defensive Guardrails:** `safety` (Error handling), `freeze_hits` (immutability), `cleanup` (state destruction).
## 2. THE 13-POINT STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (EQUATIONS & CONTEXT)
> **How the SAST Engine Calculates the Structural Surface Profile (Lower 0 - Higher Surface Presence 100%):**
> Most scores use a Sigmoid curve based on density (Hits / LOC) to prevent massive files from mathematically hiding their flaws. These 13 vectors are activity/content surface meters -- they describe what is present in a file, not the probability of a defect. The temporal-crucible validation record (gitgalaxy#2982, ~3,550 scanned snapshots, two repositories, pre-registered) tested the per-file-standing-risk claim to exhaustion and found it does not hold; see docs/vectors.md for the full record and gitgalaxy#2991 for the rename this drove. `risk_*` names remain the underlying column/key names for schema compatibility -- see the 'formerly' aliases below.
> 
> 1. **Complexity Load** (formerly Cognitive Load Exposure)**:** Measures the mental effort required for a developer to read and understand the file. `Density(Branches + (Flux * 2) + Async/Danger)` mitigated by `Doc Coverage`.
> 2. **Guard Balance** (formerly Error & Exception Risk Exposure)**:** Measures structural integrity and resilience against runtime errors. `Net Exposure = (Danger + Safety_Neg + Flux) - (Safety + Tests + Docs)`.
> 3. **Debt Markers** (formerly Tech Debt Exposure)**:** Measures the density of developer-annotated structural stress. `Density(TODOs [1x] + FIXMEs/Hacks [3x] + Empty Stubs [0.5x])`.
> 4. **Test Surface** (formerly Verification Risk Exposure)**:** Evaluates test coverage by comparing a function's structural complexity against the scope of the tests validating it.
> 5. **Connectivity** (formerly API Risk Exposure)**:** Measures the public surface area of a module. `Ratio(API Hits / Total Functions & Classes)`.
> 6. **Concurrency Surface** (formerly Concurrency Risk Exposure)**:** Measures the density of asynchronous operations, threading, and parallel execution logic.
> 7. **Mutation Surface** (formerly State Flux Risk Exposure)**:** Measures the frequency of data mutation and variable reassignment.
> 8. **Dead Code Surface** (formerly Commented Logic (dead code))**:** Measures the presence of abandoned, commented-out logic blocks.
> 9. **Spec Alignment** (formerly Spec Match Risk Exposure)**:** Measures how closely code aligns with formal specifications or architectural requirements.
> 10. **Historical Stability** (formerly Stability; predictive layer, promotion pending #2987)**:** Measures the recency of edits relative to the repository's entire lifespan. Part of the family the validation record actually supports as predictive -- currently ablated to zero in every scan (`GITGALAXY_DISABLE_GIT_HISTORY`, temporal-crucible#29).
> 11. **Historical Churn** (formerly Deep Churn; predictive layer, promotion pending #2987)**:** Measures the historical volatility and frequency of modification. Same predictive-layer status and ablation caveat as Historical Stability above.
> 12. **Documentation Surface** (formerly Documentation Risk Exposure)**:** Of the units extracted from a file, the weight-share a reader cannot recover from documentation -- public units count double, runtime-dynamic units count more, and a folder-level documentation umbrella shields the whole file. A ratio over units, not a density over lines; files with no extracted units have no value.
> 13. **Indentation Consistency:** Measures formatting alignment (Tabs vs. Spaces). Provided for codebase standardization context, not a functional risk.
> 
> **--- THE SECURITY & VULNERABILITY LENS ---**
> 14. **Obfuscation & Evasion Risk:** Measures the density of obfuscated logic, packed strings, and non-standard encoding.
> 15. **Logic Bomb / Sabotage Risk:** Measures condition-heavy execution leading to destructive OS, memory, or process commands.
> 16. **Injection Surface Risk Exposure:** Measures external network/I/O input flowing directly into dynamic execution contexts (XSS, SQLi, RCE).
> 17. **Memory Corruption Risk Exposure:** Measures the density of raw pointer math and manual memory allocations (Buffer Overflows, UAF).
> 18. **Credential Material** (formerly Secrets Risk Exposure)**:** Measures the presence of hardcoded credentials exposed to logs or globals.
> 
> **--- STRUCTURAL MAGNITUDE (NOT RISK) ---**
> **19. Function Magnitude (Impact Score):** Measures the physical footprint and 'heaviness' of a specific function. `((BranchHits + 1) * (Args + 1) + (0.05 * LOC)) * 10`. This is NOT a risk score.
> **20. File Magnitude (Total Impact):** Measures the total structural impact of a file. `Sum(Function Impacts) + API + Concurrency + Flux + (LOC / 50)`. This is NOT a risk score.

## 3. MACRO STATE
| Metric | Value |
|---|---|
| Total Artifacts | 41590 |
| Analyzed Artifacts (Scanned) | 23827 |
| Excluded Artifacts (Unparsable data, binaries, unsupported formats) | 17763 |
| Total LOC | 1268147 |
| Volatility Index | 0.0 |
| % Scanned of codebase = | 57.3% |
| Dominant Lang | PHP |

## 3.5 MACRO-NETWORK TOPOLOGY (Resilience & Coupling)
| Metric | Value | Interpretation |
|---|---|---|
| Modularity | 0.0 | High = Clean micro-boundaries. Low = Spaghetti coupling. |
| Assortativity | -0.0599 | Positive = Resilient core. Negative = Fragile single-points-of-failure. |
| Cyclic Density | 0.4% | % of files trapped in dependency loops (Static Friction). |
| Avg Path Length | 0.0 | Hops between files. Lower = Tighter coupling. |
| Articulation Pts | 1319 | Number of single files that, if removed, shatter the network. |

## 4. COMPOSITION
| Lang | Files | LOC | Share |
|---|---|---|---|
| PHP | 17734 | 1115982 | 74.4% |
| XML | 3163 | 10 | 13.3% |
| JAVASCRIPT | 821 | 56246 | 3.4% |
| PLAINTEXT | 409 | 2 | 1.7% |
| HTML | 387 | 8600 | 1.6% |
| JSON | 382 | 17805 | 1.6% |
| CSS | 374 | 56187 | 1.6% |
| CSV | 328 | 13315 | 1.4% |
| MARKDOWN | 228 | 0 | 1.0% |
| SQLITE | 1 | 0 | 0.0% |

## 4.5 REPOSITORY ECOSYSTEM BASELINE (GLOBAL ARCHITECTURE)
> **Assigned Ecosystem Baseline:** `Cluster 3`
> **Architectural Drift Z-Score:** `2.272`
> **⚠️ UNIQUE INTERPRETATION:** This repository has a high Z-Score. While it maps closest to this archetype, its internal structure is a highly unique or hybrid interpretation of the pattern.

## 4.6 FILE ARCHETYPES & STATIC ASSETS
### Active Execution Logic (ML Clusters)
| Archetype | Count | Repo % |
|---|---|---|
| Unclassified | 23168 | 97.2% |

### Inert Structural Mass (Static Categories)
| Category | Count | Repo % |
|---|---|---|
| Static: Literature & Documentation | 636 | 2.7% |
| Static: Minified & Vendor Opaque Mass | 23 | 0.1% |

## 5. EXCLUDED ARTIFACTS (Unparsable or Shielded Files)
*Total Excluded Artifacts: 17763*

**Composition by Extension & Reason:**
- `.php`: 8619x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Excluded (Machine-Generated Source Code Signature: 50 LOC), 1x Excluded (Machine-Generated Source Code Signature: 39 LOC)
- `.xml`: 6678x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Excluded (Saturation: Line 85 exceeds 500 chars), 1x Excluded (Static Asset Blob without Intent: 1880 LOC)
- `.js`: 731x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Excluded (Machine-Generated Source Code Signature: 1039 LOC), 1x Excluded (Saturation: Line 8 exceeds 500 chars)
- `.txt`: 323x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.png`: 225x Excluded (Explicitly Denied Extension: '.png')
- `.md`: 207x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Excluded (Lexical Monotony: High structural repetition detected in 7978 LOC), 1x Excluded (Machine-Generated Source Code Signature: 57 LOC)
- `no_extension`: 192x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 5x Unsupported Format (.undeterminable)
- `.less`: 119x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Zero-Density Threshold (LOC: 60, Signals: 0), 1x Zero-Density Threshold (LOC: 74, Signals: 0)
- `.gif`: 114x Excluded (Explicitly Denied Extension: '.gif')
- `.css`: 87x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 2x Excluded (Saturation: Line 6 exceeds 500 chars), 1x Excluded (Saturation: Line 2 exceeds 500 chars)
- `.xsd`: 79x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.jpg`: 65x Excluded (Explicitly Denied Extension: '.jpg')
- `.graphqls`: 48x Excluded (Unsupported Extension: '.graphqls')
- `.html`: 44x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.json`: 19x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Excluded (Static Asset Blob without Intent: 1150 LOC), 1x Excluded (Static Asset Blob without Intent: 1278 LOC)

## 6. STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (0-100%)
| Structural Surface Vector | Min | Max | Mean | Med | Mode |
|---|---|---|---|---|---|
| Complexity Load (formerly Cognitive Load Exposure) | 0.0 | 92.5 | 8.9 | 0.0 | 0.0 |
| Guard Balance (formerly Error & Exception Exposure) | 0.0 | 100.0 | 45.2 | 59.7 | 0.0 |
| Debt Markers (formerly Tech Debt Exposure) | 0.0 | 100.0 | 23.9 | 0.0 | 0.0 |
| Test Surface (formerly Testing Exposure) | 0.0 | 80.0 | 1.9 | 0.0 | 0.0 |
| Connectivity (formerly API Exposure) | 0.0 | 100.0 | 6.2 | 1.6 | 0.0 |
| Concurrency Surface (formerly Concurrency Exposure) | 0.0 | 100.0 | 0.3 | 0.0 | 0.0 |
| Mutation Surface (formerly State Flux Exposure) | 0.0 | 100.0 | 34.6 | 0.0 | 0.0 |
| Dead Code Surface (formerly Commented Logic Exposure) | 0.0 | 100.0 | 0.1 | 0.0 | 0.0 |
| Spec Alignment (formerly Specification Exposure) | 0.0 | 100.0 | 66.1 | 100.0 | 100.0 |
| Historical Stability (predictive layer, promotion pending #2987) (formerly Instability Exposure) | 0.0 | 24.9 | 0.2 | 0.0 | 0.0 |
| Historical Churn (predictive layer, promotion pending #2987) (formerly Volatility Exposure) | 0.0 | 100.0 | 0.9 | 0.0 | 0.0 |
| Doc Surface (formerly Documentation Exposure) | 0.0 | 100.0 | 3.1 | 0.0 | 0.0 |
| Credential Material (formerly Hardcoded Payload Artifacts) | 0.0 | 100.0 | 0.0 | 0.0 | 0.0 |

## 6b. SURFACE FAMILY PROFILE (Tier 1/2/3 -- gitgalaxy#2994)
> Percentile columns elsewhere in this brief that come from the Tier-2 snapshot percentiles are SNAPSHOT-RELATIVE: "87" means this file's value sits at the 87th percentile of THIS repo's files for that surface -- true by construction (Hazen average-rank), not a calibrated 0-100 risk threshold like the section 6 sigmoid scores above. An all-zero surface across the whole repo reads as 0.0 for every file, never a false-median 50.
| Family | Repo Total | Files w/ Signal | P90 File Value | Top File |
|---|---|---|---|---|
| memory | 11459 | 4078 | 1 | `dev/tests/integration/testsuite/Magento/Framework/Jwt/JwtManagerTest.php` |
| cleanup | 1080 | 624 | 0 | `dev/tests/api-functional/testsuite/Magento/Downloadable/Api/ProductRepositoryTest.php` |
| guards | 86261 | 12658 | 10 | `app/code/Magento/CatalogImportExport/Model/Import/Product.php` |
| danger | 12679 | 4342 | 1 | `app/code/Magento/Ups/Model/Carrier.php` |
| concurrency | 611 | 243 | 0 | `setup/src/Magento/Setup/Test/Unit/Model/ConfigOptionsList/LockTest.php` |
| connectivity | 55229 | 13788 | 5 | `app/code/Magento/Sales/Model/Order.php` |
| io | 1556 | 538 | 0 | `dev/tests/integration/testsuite/Magento/Framework/Jwt/JwtManagerTest.php` |
| crypto | 0 | 0 | 0 | - |
| ipc | 380 | 187 | 0 | `dev/tests/integration/testsuite/Magento/Deploy/Console/Command/App/ApplicationDumpCommandTest.php` |
| time | 1611 | 619 | 0 | `app/code/Magento/Dhl/Model/Carrier.php` |
| serialization | 1294 | 726 | 0 | `dev/tests/integration/testsuite/Magento/Csp/Model/SubresourceIntegrity/Storage/FileTest.php` |
| regex | 863 | 457 | 0 | `app/code/Magento/ProductVideo/view/adminhtml/web/js/get-video-information.js` |
| events | 3472 | 1074 | 0 | `dev/tests/integration/testsuite/Magento/Newsletter/Model/SubscriberTest.php` |
| tests | 20626 | 2996 | 2 | `setup/src/Magento/Setup/Test/Unit/Model/InstallerTest.php` |
| docs | 146043 | 18935 | 13 | `app/code/Magento/Sales/Model/Order.php` |
| debt | 1132 | 625 | 0 | `dev/tests/integration/framework/Magento/TestFramework/ApplicationStateComparator/_files/state-filter-list.php` |
| mutation | 194976 | 15937 | 20 | `app/code/Magento/Ups/Model/Carrier.php` |
| dead_code | 31090 | 10140 | 3 | `dev/tests/api-functional/testsuite/Magento/Catalog/Api/ProductRepositoryInterfaceTest.php` |
| credential | 94 | 55 | 0 | `app/code/Magento/Reports/view/adminhtml/templates/grid.phtml` |
| threat | 759 | 405 | 0 | `app/code/Magento/Customer/Setup/CustomerSetup.php` |
| ml_ai | 420 | 179 | 0 | `setup/src/Magento/Setup/Model/Installer.php` |
| ui | 10235 | 1542 | 0 | `app/code/Magento/GiftMessage/view/frontend/templates/inline.phtml` |

**Relations (repo medians):**
- `guard_balance_ratio` (guards / (danger + 1)): **1.0**
- `alloc_cleanup_pairing` (cleanup / (memory + 1)): **0.0**

## 7. ARCHITECTURAL CHOKE POINTS & DEPENDENCIES
### Top I/O Latency Risks
- `dev/tests/integration/testsuite/Magento/Framework/Jwt/JwtManagerTest.php` (Hits: 19)
- `pub/errors/processor.php` (Hits: 18)
- `app/code/Magento/Reports/Block/Adminhtml/Sales/Sales/Grid.php` (Hits: 17)

### Top 5 Structural Pillars (Highest 'Imported By' / Blast Radius)
These are the most interconnected files relative to the rest of this repository. On a repo with dense internal coupling, that means core load-bearing infrastructure -- changes carry real cascading-break risk. On a repo with a flatter internal architecture, the gap between #1 and #5 may be small, and this list is a weaker signal accordingly; compare the connection counts below before treating it as a verdict.

1. **Bootstrap.php** (`dev/tests/integration/framework/Magento/TestFramework/Helper/Bootstrap.php`) — 2532 inbound connections
2. **ObjectManager.php** (`dev/tests/integration/framework/Magento/TestFramework/ObjectManager.php`) — 1307 inbound connections
3. **Resolver.php** (`dev/tests/integration/framework/Magento/TestFramework/Workaround/Override/Fixture/Resolver.php`) — 901 inbound connections
4. **TestCase.php** (`dev/tests/integration/framework/Magento/TestFramework/Indexer/TestCase.php`) — 878 inbound connections
5. **ProductRepositoryInterface.php** (`app/code/Magento/Catalog/Api/ProductRepositoryInterface.php`) — 850 inbound connections

### Top 5 Orchestrators (Highest 'Imports' / Fragility Index)
These files pull in the most external dependencies. They are highly coupled and fragile to API changes.

1. **schema_response_sdl_description.php** (`dev/tests/integration/testsuite/Magento/Framework/GraphQl/_files/schema_response_sdl_description.php`) — 344 outbound dependencies
2. **schema_with_description_sdl.php** (`dev/tests/integration/testsuite/Magento/Framework/GraphQl/_files/schema_with_description_sdl.php`) — 344 outbound dependencies
3. **CategorySetup.php** (`app/code/Magento/Catalog/Setup/CategorySetup.php`) — 286 outbound dependencies
4. **InstallerTest.php** (`setup/src/Magento/Setup/Test/Unit/Model/InstallerTest.php`) — 157 outbound dependencies
5. **CustomerSetup.php** (`app/code/Magento/Customer/Setup/CustomerSetup.php`) — 155 outbound dependencies

## 8. CORE FUNCTION HITLIST (Heaviest Functions)
> *Note: The 'Impact' metric below represents Structural Magnitude (complexity, arguments, and length), NOT operational risk. These are the load-bearing pillars of the logic.*

- `__construct` (@ `app/code/Magento/Customer/Model/AccountManagement.php`) -> Impact: **224.8** | LOC: 89
  * *Intent:* * @param SessionCleanerInterface|null $sessionCleaner * @param AuthorizationInterface|null $authorization * @param AuthenticationInterface|null $authe...
- `__construct` (@ `app/code/Magento/CatalogRule/Model/Indexer/IndexBuilder.php`) -> Impact: **207.1** | LOC: 89
  * *Intent:* * @param TableSwapper|null $tableSwapper * @param TimezoneInterface|null $localeDate * @param ProductCollectionFactory|null $productCollectionFactory ...
- `getRateRequest` (@ `app/code/Magento/Tax/Model/Calculation.php`) -> Impact: **133.4** | LOC: 120
  * *Intent:* * postcode (->getPostcode()) * customer_class_id (->getCustomerClassId()) * store (->getStore()) * * @param null|bool|\Magento\Framework\DataObject|Cu...
- `saveProductMediaGalleryPhase` (@ `app/code/Magento/CatalogImportExport/Model/Import/Product.php`) -> Impact: **114.1** | LOC: 132
  * *Intent:* * @param int $rowNum * @param array $rowData * @param int $storeId * @param array $existingImages * @param string $productMediaPath * @param array $up...
- `__construct` (@ `app/code/Magento/Catalog/Model/ResourceModel/Product/Collection.php`) -> Impact: **113.2** | LOC: 73
  * *Intent:* * @param ProductLimitationFactory|null $productLimitationFactory * @param MetadataPool|null $metadataPool * @param TableMaintainer|null $tableMaintain...
- `insertOrder` (@ `app/code/Magento/Sales/Model/Order/Pdf/AbstractPdf.php`) -> Impact: **106.4** | LOC: 248
  * *Intent:* /** * Insert order to pdf page. * * @param \Zend_Pdf_Page $page * @param \Magento\Sales\Model\Order $obj * @param bool $putOrderId * @return void * @S...
- `collect` (@ `app/code/Magento/SalesRule/Model/Quote/Discount.php`) -> Impact: **103.0** | LOC: 141
  * *Intent:* /** * Collect address discount amount * * @param Quote $quote * @param ShippingAssignmentInterface $shippingAssignment * @param Total $total * @return...
- `__construct` (@ `app/code/Magento/Sitemap/Model/Batch/Sitemap.php`) -> Impact: **93.0** | LOC: 59
  * *Intent:* * @param AbstractResource|null $resource * @param AbstractDb|null $resourceCollection * @param array $data * @param DocumentRoot|null $documentRoot * ...
- `scan` (@ `setup/src/Magento/Setup/Module/Di/Code/Reader/FileScanner.php`) -> Impact: **86.3** | LOC: 347
  * *Intent:* /** * @inheritDoc */
- `getTotalPrices` (@ `app/code/Magento/Bundle/Model/Product/Price.php`) -> Impact: **85.8** | LOC: 150
  * *Intent:* /** * Retrieve Price considering tier price * * @param \Magento\Catalog\Model\Product $product * @param string|null $which * @param bool|null $include...

## 9. DIRECTORY GROUPS (Top 10 Heaviest Modules)
| Folder Path | Files | Total Impact | Avg Complexity Load | Avg Debt Markers |
|---|---|---|---|---|
| `dev/tests/integration/testsuite/Magento/Catalog/_files` | 420 | 9274.32 | 4.06% | 0.0% |
| `app/code/Magento/Downloadable/view/adminhtml/templates/product/edit/downloadable` | 2 | 8147.89 | 69.63% | 8.68% |
| `app/code/Magento/Sales/Model/Order` | 46 | 5737.26 | 18.15% | 28.82% |
| `app/code/Magento/Sales/Api/Data` | 51 | 4807.78 | 0.24% | 0.0% |
| `dev/tests/integration/testsuite/Magento/Sales/_files` | 202 | 4773.2 | 6.41% | 0.0% |
| `app/code/Magento/Customer/Model` | 43 | 4393.9 | 21.53% | 9.59% |
| `app/code/Magento/Catalog/Model` | 50 | 4391.96 | 14.72% | 32.35% |
| `app/code/Magento/Paypal/Model` | 25 | 3807.12 | 25.33% | 40.28% |
| `dev/tests/api-functional/testsuite/Magento/Catalog/Api` | 44 | 3456.08 | 12.28% | 0.0% |
| `app/code/Magento/Quote/Model` | 38 | 3318.28 | 14.9% | 32.47% |

## 10. TARGETED STRUCTURAL SURFACE VECTORS (formerly Risk Vectors, Top 5 by Surface)
### Highest Debt Markers (formerly Tech Debt; Fragile/Planned)
- `app/code/Magento/AsynchronousOperations/Model/ItemStatus.php` -> **100.0%** Exposure
- `app/code/Magento/Catalog/Block/Adminhtml/Product/Edit/Action/Attribute/Tab/Inventory.php` -> **100.0%** Exposure
- `app/code/Magento/Catalog/Model/Product/Gallery/Entry.php` -> **100.0%** Exposure
- `app/code/Magento/Catalog/Model/Product/Price/SpecialPrice.php` -> **100.0%** Exposure
- `app/code/Magento/Catalog/Model/Product/Price/TierPrice.php` -> **100.0%** Exposure
### Highest Mutation Surface (formerly State Flux; Mutation/Volatility)
- `app/code/Magento/AdminAnalytics/Controller/Adminhtml/Config/DisableAdminUsage.php` -> **100.0%** Exposure
- `app/code/Magento/AdminAnalytics/Controller/Adminhtml/Config/EnableAdminUsage.php` -> **100.0%** Exposure
- `app/code/Magento/AdminAnalytics/view/adminhtml/templates/notification.phtml` -> **100.0%** Exposure
- `app/code/Magento/AdminNotification/Block/Grid/Renderer/Severity.php` -> **100.0%** Exposure
- `app/code/Magento/AdminNotification/Model/ResourceModel/System/Message/Collection/Synchronized.php` -> **100.0%** Exposure
### Highest Design Slop (Dead & Duplicated Logic)
- `dev/tests/api-functional/testsuite/Magento/Catalog/Api/ProductRepositoryInterfaceTest.php` -> **44** Orphaned Functions | **0** Duplicates
- `app/code/Magento/Vault/Model/Method/NullPaymentProvider.php` -> **42** Orphaned Functions | **0** Duplicates
- `dev/tests/api-functional/testsuite/Magento/GraphQl/Catalog/ProductSearchTest.php` -> **40** Orphaned Functions | **0** Duplicates
- `app/code/Magento/Sales/Model/Order/ShippingTotal.php` -> **38** Orphaned Functions | **0** Duplicates
- `dev/tests/integration/testsuite/Magento/User/Model/UserTest.php` -> **38** Orphaned Functions | **0** Duplicates

## 10.5 AI THREAT INTELLIGENCE (XGBoost)
*No files met the threshold for malicious structural signatures.*

## 10.6 WEAPONIZABLE SURFACE EXPOSURES (RULE-BASED SAST)
> Secondary Evidence: The following files tripped specific static threat signatures. Use these to explain *why* the XGBoost model flagged the files above.

### Credential Material (formerly Hardcoded Payload Artifacts)
- `dev/tests/integration/testsuite/Magento/JwtFrameworkAdapter/Model/JwsManagerTest.php` -> **99.9767%** Exposure
- `dev/tests/integration/testsuite/Magento/Paypal/Model/Payflow/Service/Request/SecureTokenTest.php` -> **95.8312%** Exposure

## 10.7 ECOSYSTEM SECURITY AUDITS
> **AI CONTEXT:** High-level perimeter defense metrics from the X-Ray, Supply Chain Firewall, and API Network Mapper.

### ☢️ X-Ray & 🧱 Supply Chain Firewall
- **Binary Anomalies (X-Ray):** `42` (High entropy, packed payloads, or magic byte mismatches).
- **Blacklisted Dependencies:** `0` explicitly banned packages imported.
- **Unknown Dependencies:** `73731` packages imported that bypass the Zero-Trust whitelist.

## 11. CUMULATIVE RISK HITLIST (Top 10 Highest Risk Files)
> Cumulative Risk is the sum of all individual risk exposures. These files represent the highest multi-dimensional technical debt and architectural fragility.

### 1. `app/code/Magento/Wishlist/view/frontend/web/js/view/wishlist-mixin.js` (JAVASCRIPT) -> Cumulative Risk: **622.47**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 48.54 | **LOC:** 66 | **CtrlFlow:** 17.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Concurrency (100.0%), State Flux (100.0%), Spec Match (100.0%), Documentation (100.0%)
- **Heaviest Functions:** `initialize` (Impact: 11.6), `updateCounters` (Impact: 9.7), `clearPeriodicCounterUpdate` (Impact: 2.3)

### 2. `app/code/Magento/ProductVideo/view/frontend/web/js/load-player.js` (JAVASCRIPT) -> Cumulative Risk: **613.84**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 187.86 | **LOC:** 393 | **CtrlFlow:** 11.4% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Concurrency (98.6095%), Tech Debt (90.1581%)
- **Heaviest Functions:** `_create` (Impact: 13.8), `onStateChange` (Impact: 9.3), `_create` (Impact: 6.2)

### 3. `app/code/Magento/Shipping/view/adminhtml/web/order/packaging.js` (JAVASCRIPT) -> Cumulative Risk: **588.79**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 600.86 | **LOC:** 920 | **CtrlFlow:** 19.9% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (94.9326%), Documentation (84.0909%)
- **Heaviest Functions:** `sendCreateLabelRequest` (Impact: 40.0), `packItems` (Impact: 31.1), `checkSizeAndGirthParameter` (Impact: 27.2)

### 4. `app/code/Magento/Ui/view/base/web/js/grid/columns/actions.js` (JAVASCRIPT) -> Cumulative Risk: **586.84**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 108.5 | **LOC:** 341 | **CtrlFlow:** 9.1% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Concurrency (100.0%), State Flux (100.0%), Spec Match (100.0%), Tech Debt (89.9977%)
- **Heaviest Functions:** `_getCallback` (Impact: 9.4), `defaultCallback` (Impact: 6.5), `getAction` (Impact: 5.5)

### 5. `app/code/Magento/Checkout/view/frontend/web/js/cart/ensure-subtotal-sync.js` (JAVASCRIPT) -> Cumulative Risk: **586.76**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 76.58 | **LOC:** 135 | **CtrlFlow:** 19.1% | **Authorship Centralization:** 100.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Tech Debt (94.4647%), State Flux (92.2027%), Documentation (87.5%)
- **Heaviest Functions:** `initEnsureSubtotalSync` (Impact: 37.1), `parsePrice` (Impact: 12.4), `trySync` (Impact: 6.9)

### 6. `app/code/Magento/Customer/view/frontend/web/js/zxcvbn.js` (JAVASCRIPT) -> Cumulative Risk: **586.37**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 781.32 | **LOC:** 868 | **CtrlFlow:** 39.8% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Documentation (100.0%), Safety Score (98.2296%)
- **Heaviest Functions:** `enumerate_l33t_subs` (Impact: 24.5), `dictionary_match` (Impact: 23.3), `l33t_match` (Impact: 22.8)

### 7. `app/code/Magento/Ui/view/base/web/js/form/element/file-uploader.js` (JAVASCRIPT) -> Cumulative Risk: **573.91**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 267.3 | **LOC:** 703 | **CtrlFlow:** 10.9% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), State Flux (94.986%), Tech Debt (93.2759%), Verification (80.0%)
- **Heaviest Functions:** `getFilePreviewType` (Impact: 14.9), `initUploader` (Impact: 14.2), `onPreviewLoad` (Impact: 12.7)

### 8. `app/code/Magento/GoogleGtag/view/frontend/web/js/google-analytics.js` (JAVASCRIPT) -> Cumulative Risk: **556.46**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 38.12 | **LOC:** 69 | **CtrlFlow:** 21.6% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Concurrency (100.0%), State Flux (100.0%), Spec Match (100.0%), Documentation (100.0%)
- **Heaviest Functions:** `gtag` (Impact: 1.1)

### 9. `app/code/Magento/Bundle/Pricing/Adjustment/Calculator.php` (PHP) -> Cumulative Risk: **550.71**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 264.74 | **LOC:** 436 | **CtrlFlow:** 15.3% | **Authorship Centralization:** 100.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Tech Debt (99.2843%), Safety Score (95.5823%)
- **Heaviest Functions:** `calculateDynamicBundleAmount` (Impact: 38.4), `processOptions` (Impact: 23.2), `createSelectionPriceList` (Impact: 11.2)

### 10. `app/code/Magento/Ui/view/base/web/js/lib/view/utils/async.js` (JAVASCRIPT) -> Cumulative Risk: **548.33**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 126.44 | **LOC:** 241 | **CtrlFlow:** 21.4% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Concurrency (100.0%), State Flux (100.0%), Spec Match (100.0%), Safety Score (90.2672%)
- **Heaviest Functions:** `get` (Impact: 11.5), `parseData` (Impact: 11.4), `parseSelector` (Impact: 9.9)

## 12. SCANNED ARTIFACTS HITLIST (Top 25 Heaviest Files)
> *Note: 'Magnitude' represents the file's total Structural Magnitude and impact within the system. It is independent of its Risk Profile. High magnitude implies high structural importance and centralization.*

### `app/code/Magento/Downloadable/view/adminhtml/templates/product/edit/downloadable/links.phtml` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 7994.77 | **LOC:** 486 | **CtrlFlow:** 35.5% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (75.7142%), Tech Debt (0.0%)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 43 instances
* *State Mutation (weighted view):* 138
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 158`, `structural_boundaries: 109`, `args: 22`, `func_start: 11`
* *Risk/State:* `safety_bypasses: 9`, `state_mutation: 52`
* *Architecture:* `import: 1`
* *Defense:* `safety: 5`, `doc: 3`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 0.027
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` "<?=  $block->escapeJs($block->escapeUrl($block->getUploadUrl('link_samples'))) ?>", "<?=  $block->escapeJs($block->escapeUrl($block->getUploadUrl('links'))) ?>", '"')) ?>">' +
                        '<script>'+
                        'linksUploader("#downloadable_link_<%- data.id %>_sample_file", file-uploader', mage', template', translate'
], 'prototype'...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `app/code/Magento/Ups/Model/Carrier.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 2209.42 | **LOC:** 3012 | **CtrlFlow:** 16.2% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (40.6136%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `_formShipmentRequest` (Impact: 56.9)
  * `_formShipmentRestRequest` (Impact: 54.4)
  * `processShippingRestRateForItem` (Impact: 48.4)
  * `setRequest` (Impact: 46.0)
    * *Intent:* /** * Prepare and set request to this instance * * @param RateRequest $request * @return $this * @Su...
  * `processShippingXmlRateForItem` (Impact: 43.6)
    * *Intent:* /** * Prepare shipping rate result based on response * * @param mixed $xmlResponse * @return Result ...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 403 instances
* *State Mutation (weighted view):* 1410
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 341`, `structural_boundaries: 250`, `args: 58`, `func_start: 55`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 49`, `state_mutation: 604`
* *Architecture:* `api: 24`, `import: 44`
* *Defense:* `safety: 76`, `doc: 92`, `immutability_locks: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.035
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 21):` 2 => __('Adult Signature Required')], 3 => __('Adult Signature Required'), GuzzleHttp\Exception\GuzzleException, Laminas\Http\Client, Magento\CatalogInventory\Api\StockRegistryInterface, Magento\Directory\Helper\Data, Magento\Directory\Model\CountryFactory, Magento\Directory\Model\CurrencyFactory...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `app/code/Magento/CatalogImportExport/Model/Import/Product.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 2056.3 | **LOC:** 3680 | **CtrlFlow:** 18.3% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (37.1176%), Tech Debt (8.2545%)
**Top Internal Functions/Classes:**
  * `saveProductMediaGalleryPhase` (Impact: 114.1)
    * *Intent:* * @param int $rowNum * @param array $rowData * @param int $storeId * @param array $existingImages * ...
  * `saveProductAttributesPhase` (Impact: 85.7)
    * *Intent:* /** * In _saveProducts loop, save product's attributes * * @param array $rowData * @param int $rowSc...
  * `validateRow` (Impact: 66.3)
    * *Intent:* /** * Validate data row. * * @param array $rowData * @param int $rowNum * @return boolean * @Suppres...
  * `_saveProducts` (Impact: 21.5)
    * *Intent:* /** * Gather and save information about product entities. * * FIXME: Reduce nesting level * * @retur...
  * `formatStockDataForRow` (Impact: 21.1)
    * *Intent:* /** * Format row data to DB compatible values. * * @param array $rowData * @return array */
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 337 instances
* *State Mutation (weighted view):* 1116
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 398`, `structural_boundaries: 330`, `args: 103`, `func_start: 102`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 37`, `state_mutation: 442`, `dead_code: 1`, `fragile_debt: 1`
* *Architecture:* `api: 56`, `import: 33`
* *Defense:* `safety: 109`, `doc: 208`, `immutability_locks: 30`, `cleanup: 4`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 0.182
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 24):` 'insufficientPermissions' => 'Invalid format.', 'invalidNewToDateValue' => 'Make sure new_to_date is later than or the same,  Can't add new translated strings in patch release
        'invalidLayoutUpdate' => 'Invalid format.', Magento\AwsS3\Driver\AwsS3, Magento\CatalogImportExport\Model\Import\Product\ImageTypeProcessor, Magento\CatalogImportExport\Model\Import\Product\LinkProcessor, Magento\CatalogImportExport\Model\Import\Product\MediaGalleryProcessor, Magento\CatalogImportExport\Model\Import\Product\RowValidatorInterface...
  * `Imported By (In-Degree: 26):` (Excluded from Brief to save tokens)

### `app/code/Magento/Dhl/Model/Carrier.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1943.0 | **LOC:** 2939 | **CtrlFlow:** 17.4% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (36.7025%), Tech Debt (12.0756%)
**Top Internal Functions/Classes:**
  * `__construct` (Impact: 58.1)
    * *Intent:* * @param Reader $configReader * @param StoreManagerInterface $storeManager * @param StringUtils $str...
  * `_parseXmlTrackingResponse` (Impact: 52.7)
    * *Intent:* /** * Parse xml tracking response * * @param string[] $trackings * @param string $response * @return...
  * `_addRestRate` (Impact: 46.9)
    * *Intent:* /** * DHL Quote Data calculating rates * * @param array $product * @param array $exchangeRates * @re...
  * `_parseRestTrackingResponse` (Impact: 43.7)
    * *Intent:* /** * @param string[] $trackings * @param string $response * @return void * @SuppressWarnings(PHPMD....
  * `_addRate` (Impact: 38.7)
    * *Intent:* /** * Add rate to DHL rates array * * @param SimpleXMLElement $shipmentDetails * @return $this * @Su...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 326 instances
* *State Mutation (weighted view):* 1153
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 355`, `structural_boundaries: 262`, `args: 63`, `func_start: 58`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 33`, `state_mutation: 501`, `dead_code: 1`, `unreferenced_by_name: 10`
* *Architecture:* `api: 27`, `import: 55`
* *Defense:* `safety: 114`, `doc: 122`, `immutability_locks: 18`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.027
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 23):` (string)substr($this->getConfigData('account'), 0, 9), DATE_RFC3339, Exception, Laminas\Http\Request, Magento\CatalogInventory\Api\StockRegistryInterface, Magento\Catalog\Model\Product\Type...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `app/code/Magento/Sales/Model/Order.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1652.06 | **LOC:** 4738 | **CtrlFlow:** 10.0% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (22.7065%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `registerCancellation` (Impact: 21.3)
    * *Intent:* /** * Prepare order totals to cancellation * * @param string $comment * @param bool $graceful * @ret...
  * `_canReorder` (Impact: 15.9)
    * *Intent:* /** * Retrieve order reorder availability * * @param bool $ignoreSalable * @return bool * @SuppressW...
  * `canCancel` (Impact: 14.8)
    * *Intent:* /** * Retrieve order cancel availability * * @return bool * @SuppressWarnings(PHPMD.CyclomaticComple...
  * `canCreditmemoForZeroTotal` (Impact: 13.8)
    * *Intent:* /** * Retrieve credit memo for zero total availability. * * @param float $totalRefundable * @return ...
  * `getCustomerName` (Impact: 12.2)
    * *Intent:* /** * Get customer name * * @return string * @SuppressWarnings(PHPMD.CyclomaticComplexity) */
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 117 instances
* *State Mutation (weighted view):* 411
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 231`, `structural_boundaries: 888`, `args: 375`, `func_start: 375`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 17`, `state_mutation: 177`
* *Architecture:* `api: 384`, `import: 44`
* *Defense:* `safety: 17`, `doc: 428`, `immutability_locks: 21`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 1.663
  * `Choke Point (Betweenness):` 6.7e-05 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 30):` Magento\Catalog\Api\ProductRepositoryInterface, Magento\Catalog\Model\Product\Type, Magento\Catalog\Model\Product\Visibility, Magento\Config\Model\Config\Source\Nooptreq, Magento\Directory\Model\Currency, Magento\Directory\Model\CurrencyFactory, Magento\Directory\Model\RegionFactory, Magento\Directory\Model\ResourceModel\Region...
  * `Imported By (In-Degree: 238):` (Excluded from Brief to save tokens)

### `app/code/Magento/Catalog/Model/ResourceModel/Product/Collection.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1505.56 | **LOC:** 2584 | **CtrlFlow:** 17.5% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (36.726%), Tech Debt (8.0497%)
**Top Internal Functions/Classes:**
  * `__construct` (Impact: 113.2)
    * *Intent:* * @param ProductLimitationFactory|null $productLimitationFactory * @param MetadataPool|null $metadat...
  * `addAttributeToSort` (Impact: 32.2)
    * *Intent:* /** * Add attribute to sort order * * @param string $attribute * @param string $dir * @return $this ...
  * `addAttributeToFilter` (Impact: 26.0)
    * *Intent:* /** * Add attribute to filter * * @param \Magento\Eav\Model\Entity\Attribute\AbstractAttribute|strin...
  * `_productLimitationPrice` (Impact: 23.7)
    * *Intent:* /** * Join Product Price Table with left-join possibility * * @param bool $joinLeft * @return $this ...
  * `addCountToCategories` (Impact: 19.5)
    * *Intent:* /** * Adding product count to categories collection * * @param \Magento\Eav\Model\Entity\Collection\...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 216 instances
* *State Mutation (weighted view):* 771
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 271`, `structural_boundaries: 295`, `args: 94`, `func_start: 92`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 16`, `state_mutation: 339`, `planned_debt: 1`
* *Architecture:* `api: 66`, `import: 19`
* *Defense:* `safety: 54`, `doc: 146`, `immutability_locks: 2`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 1.396
  * `Choke Point (Betweenness):` 0.000239 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 14):` 'left', Magento\CatalogUrlRewrite\Model\ProductUrlRewriteGenerator, Magento\CatalogUrlRewrite\Model\Storage\DbStorage, Magento\Catalog\Api\Data\CategoryInterface, Magento\Catalog\Api\Data\ProductInterface, Magento\Catalog\Model\Indexer\Category\Product\TableMaintainer, Magento\Catalog\Model\Indexer\Product\Price\PriceTableResolver, Magento\Catalog\Model\Product\Attribute\Source\Status...
  * `Imported By (In-Degree: 94):` (Excluded from Brief to save tokens)

### `app/code/Magento/CatalogImportExport/Model/Import/Product/Option.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1499.44 | **LOC:** 2252 | **CtrlFlow:** 22.4% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (39.0711%), Tech Debt (16.3599%)
**Top Internal Functions/Classes:**
  * `__construct` (Impact: 59.3)
    * *Intent:* * @param ProductFactory $productFactory * @param CollectionFactory $optionColFactory * @param Collec...
  * `_getSpecificTypeData` (Impact: 29.4)
    * *Intent:* /** * Retrieve specific type data * * @param array $rowData * @param int $optionTypeId * @param bool...
  * `_importData` (Impact: 26.6)
    * *Intent:* /** * Import data rows. * * Additional store view data (option titles) will be sought in store view ...
  * `_parseCustomOptions` (Impact: 25.5)
    * *Intent:* /** * Parse custom options string to inner format. * * @param array $rowData * @return array * @Supp...
  * `_collectOptionTypeData` (Impact: 22.4)
    * *Intent:* * Collect custom option type data to import * * @param array $rowData * @param int &$prevOptionId * ...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 233 instances
* *State Mutation (weighted view):* 752
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 310`, `structural_boundaries: 220`, `args: 63`, `func_start: 61`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 16`, `state_mutation: 286`, `dead_code: 1`, `planned_debt: 1`, `unreferenced_by_name: 7`
* *Architecture:* `api: 28`, `import: 20`
* *Defense:* `safety: 111`, `doc: 112`, `immutability_locks: 23`, `cleanup: 6`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.027
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 11):` $rowNumber, 'updated_at' => $this->dateTime->date(null, 'updated_at'], Magento\CatalogImportExport\Model\Import\Product, Magento\Catalog\Api\Data\ProductInterface, Magento\Catalog\Model\ProductFactory, Magento\Catalog\Model\ResourceModel\Product\Option\CollectionFactory, Magento\Catalog\Model\ResourceModel\Product\Option\Value\Collection...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `app/code/Magento/CatalogImportExport/Model/Export/Product.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1438.24 | **LOC:** 2366 | **CtrlFlow:** 16.7% | **Authorship Centralization:** 66.7%
- **Risk Profile:** Cognitive Load (36.3528%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `appendMultirowData` (Impact: 56.8)
    * *Intent:* /** * Append multi row data * * @param array $dataRow * @param array $multiRawData * @return array *...
  * `collectRawData` (Impact: 30.9)
    * *Intent:* /** * Collect export data for all products * * @return array * @SuppressWarnings(PHPMD.CyclomaticCom...
  * `__construct` (Impact: 25.4)
    * *Intent:* * @param \Magento\Eav\Model\ResourceModel\Entity\Attribute\Set\CollectionFactory $attrSetColFactory ...
  * `getCustomOptionsData` (Impact: 23.0)
    * *Intent:* /** * Collect custom options data for products that will be exported. * * Option name and type will ...
  * `capItemsPerPageByAttributeCount` (Impact: 17.6)
    * *Intent:* /** * Cap page size for large attribute sets to keep EAV load queries controllable * * @param int $i...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 258 instances
* *State Mutation (weighted view):* 897
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 244`, `structural_boundaries: 206`, `args: 63`, `func_start: 58`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 11`, `state_mutation: 381`
* *Architecture:* `api: 20`, `import: 12`
* *Defense:* `safety: 58`, `doc: 121`, `immutability_locks: 11`, `cleanup: 11`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.046
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 12):` $defaultOptionsData, $optionData, Magento\CatalogImportExport\Model\Import\Product, Magento\CatalogImportExport\Model\Import\Product\CategoryProcessor, Magento\CatalogInventory\Api\StockConfigurationInterface, Magento\Catalog\Model\Product, Magento\Catalog\Model\ResourceModel\Product\Option\Collection, Magento\Eav\Model\Entity\Attribute\ScopedAttributeInterface...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `app/code/Magento/Usps/Model/Carrier.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1354.98 | **LOC:** 2538 | **CtrlFlow:** 13.5% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (41.5373%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `_formIntlShipmentRequest` (Impact: 74.5)
    * *Intent:* /** * Form XML for international shipment request * As integration guide it is important to follow a...
  * `setRequest` (Impact: 45.8)
    * *Intent:* /** * Prepare and set request to this instance * * @param \Magento\Quote\Model\Quote\Address\RateReq...
  * `_formUsSignatureConfirmationShipmentRequest` (Impact: 43.7)
    * *Intent:* /** * Form XML for US Signature Confirmation request * As integration guide it is important to follo...
  * `_parseXmlResponse` (Impact: 39.5)
    * *Intent:* /** * Parse calculated rates * * @param string $response * @return Result * @link http://www.usps.co...
  * `__construct` (Impact: 39.4)
    * *Intent:* * @param \Magento\Shipping\Helper\Carrier $carrierHelper * @param \Magento\Catalog\Model\ResourceMod...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 229 instances
* *State Mutation (weighted view):* 750
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 255`, `structural_boundaries: 164`, `args: 47`, `func_start: 44`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 39`, `state_mutation: 292`
* *Architecture:* `api: 40`, `import: 19`
* *Defense:* `safety: 42`, `doc: 76`, `immutability_locks: 10`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.039
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 8):` 'False' => __('Required')]
        ], Magento\Framework\App\ObjectManager, Magento\Framework\Async\CallbackDeferred, Magento\Framework\DataObject, Magento\Framework\Exception\LocalizedException, Magento\Framework\HTTP\AsyncClientInterface, Magento\Framework\HTTP\AsyncClient\HttpException, Magento\Framework\HTTP\AsyncClient\Request...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `app/code/Magento/Sales/Model/AdminOrder/Create.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1321.7 | **LOC:** 2434 | **CtrlFlow:** 17.9% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (36.9543%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `moveQuoteItem` (Impact: 71.0)
    * *Intent:* /** * Move quote item to another items list * * @param int|\Magento\Quote\Model\Quote\Item $item * @...
  * `initFromOrder` (Impact: 28.5)
    * *Intent:* /** * Initialize creation data from existing order * * @param \Magento\Sales\Model\Order $order * @r...
  * `applySidebarData` (Impact: 28.4)
    * *Intent:* /** * Handle data sent from sidebar * * @param array $data * @return $this * @throws \Magento\Framew...
  * `_prepareCustomerAddress` (Impact: 25.0)
    * *Intent:* /** * Create customer address and save it in the quote so that it can be used to persist later. * * ...
  * `_setQuoteAddress` (Impact: 23.3)
    * *Intent:* /** * Set and validate Quote address * * All errors added to _errors * * @param \Magento\Quote\Model...
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 1 instances
* *Amplified Cascading Flux:* 213 instances
* *Memory Alloc (weighted view):* 0
* *State Mutation (weighted view):* 705
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 267`, `structural_boundaries: 213`, `args: 68`, `func_start: 66`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 10`, `state_mutation: 279`
* *Architecture:* `api: 43`, `import: 18`
* *Defense:* `safety: 100`, `doc: 127`, `immutability_locks: 2`, `cleanup: 5`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 0.064
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 15):` $this->_session->getStore()->getId(), 
    private function isEmailRequired(): bool
    
        return (bool)$this->_scopeConfig->getValue(
            self::XML_PATH_EMAIL_REQUIRED_CREATE_ORDER, Magento\Customer\Api\AddressMetadataInterface, Magento\Customer\Api\Data\AttributeMetadataInterface, Magento\Customer\Model\Metadata\Form, Magento\Framework\Api\ExtensibleDataObjectConverter, Magento\Framework\App\ObjectManager, Magento\Framework\App\Request\Http...
  * `Imported By (In-Degree: 6):` (Excluded from Brief to save tokens)

### `app/code/Magento/Quote/Model/Quote.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1307.92 | **LOC:** 2736 | **CtrlFlow:** 19.4% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (37.6498%), Tech Debt (8.8806%)
**Top Internal Functions/Classes:**
  * `addProduct` (Impact: 48.6)
    * *Intent:* /** * Add product. Returns error message if product type instance can't prepare product. * * @param ...
  * `updateItem` (Impact: 28.8)
    * *Intent:* * - 'files_prefix': string[a-z0-9_] - prefix that was added at frontend to names of file options (fi...
  * `validateMinimumAmount` (Impact: 26.4)
    * *Intent:* /** * Validate minimum amount. * * @param bool $multishipping * @return bool * @SuppressWarnings(PHP...
  * `removeErrorInfosByParams` (Impact: 22.5)
    * *Intent:* /** * Removes error infos, that have parameters equal to passed in $params. * $params can have follo...
  * `assignCustomerWithAddressChange` (Impact: 22.2)
    * *Intent:* /** * Assign customer model to quote with billing and shipping address change * * @param \Magento\Cu...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 170 instances
* *State Mutation (weighted view):* 564
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 282`, `structural_boundaries: 344`, `args: 119`, `func_start: 119`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 17`, `state_mutation: 224`, `dead_code: 2`, `planned_debt: 4`
* *Architecture:* `api: 111`, `import: 15`
* *Defense:* `safety: 33`, `doc: 187`, `immutability_locks: 1`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 1.782
  * `Choke Point (Betweenness):` 1.6e-05 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 9):` $storeId, include_discount_amount', Discount ?
                        $item->getBaseRowTotal() - $item->getBaseDiscountAmount() + $taxes :
                        $item->getBaseRowTotal() + $taxes, Discount ?
                    $address->getBaseSubtotalWithDiscount() + $taxes :
                    $address->getBaseSubtotal() + $taxes, Magento\Catalog\Model\Product\Attribute\Source\Status, Magento\Customer\Api\Data\CustomerInterface, Magento\Customer\Api\Data\GroupInterface, Magento\Directory\Model\AllowedCountries...
  * `Imported By (In-Degree: 208):` (Excluded from Brief to save tokens)

### `app/code/Magento/Eav/Model/Entity/Collection/AbstractCollection.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1176.86 | **LOC:** 1789 | **CtrlFlow:** 20.5% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (49.4446%), Tech Debt (9.1324%)
**Top Internal Functions/Classes:**
  * `joinAttribute` (Impact: 54.0)
    * *Intent:* * After first use of string entity name it will be cached in the collection * * @todo connect betwee...
  * `joinField` (Impact: 44.8)
    * *Intent:* * ('country_name', 'directory_country_name', 'name', 'country_id=shipping_country', * "{{table}}.lan...
  * `joinTable` (Impact: 44.5)
    * *Intent:* /** * Join a table * * @param string|array $table * @param string $bind * @param string|array $field...
  * `_loadAttributes` (Impact: 36.6)
    * *Intent:* /** * Load attributes into loaded entities * * @param bool $printQuery * @param bool $logQuery * @re...
  * `addAttributeToFilter` (Impact: 28.1)
    * *Intent:* * array( * array('attribute'=>'firstname', 'like'=>'test%'), * array('attribute'=>'lastname', 'like'...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 175 instances
* *State Mutation (weighted view):* 578
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 203`, `structural_boundaries: 198`, `args: 64`, `func_start: 64`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 4`, `state_mutation: 228`, `dead_code: 1`, `planned_debt: 3`
* *Architecture:* `io: 4`, `api: 49`, `import: 4`
* *Defense:* `safety: 75`, `doc: 86`, `immutability_locks: 1`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 0.246
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` Magento\Framework\App\ResourceConnection\SourceProviderInterface, Magento\Framework\DB\Select, Magento\Framework\Data\Collection\AbstractDb, Magento\Framework\Exception\LocalizedException
  * `Imported By (In-Degree: 18):` (Excluded from Brief to save tokens)

### `app/code/Magento/Sales/Api/Data/OrderInterface.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1162.12 | **LOC:** 2630 | **CtrlFlow:** 0.7% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (3.16%), Tech Debt (0.0%)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 3 instances
* *State Mutation (weighted view):* 9
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 3`, `structural_boundaries: 277`, `args: 274`, `func_start: 274`, `class_start: 1`
* *Risk/State:* `state_mutation: 3`
* *Architecture:* `api: 274`
* *Defense:* `doc: 277`, `immutability_locks: 136`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 1.145
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 162):` (Excluded from Brief to save tokens)

### `app/code/Magento/Eav/Model/Entity/AbstractEntity.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1143.58 | **LOC:** 2052 | **CtrlFlow:** 18.9% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (49.3452%), Tech Debt (8.6404%)
**Top Internal Functions/Classes:**
  * `walkAttributes` (Impact: 63.9)
    * *Intent:* * Returns array with results for each attribute * * if $partMethod is in format "part/method" will r...
  * `_collectSaveData` (Impact: 47.3)
    * *Intent:* /** * Prepare entity object data for save * * Result array structure: * array ( * 'newObject', 'enti...
  * `_processSaveData` (Impact: 25.9)
    * *Intent:* /** * Save object collected data * * @param array $saveData array('newObject', 'entityRow', 'insert'...
  * `saveAttribute` (Impact: 24.7)
    * *Intent:* /** * Save attribute * * @param DataObject $object * @param string $attributeCode * @return $this * ...
  * `__construct` (Impact: 17.0)
    * *Intent:* /** * @param Context $context * @param array $data * @param UniqueValidationInterface|null $uniqueVa...
**Contextual Mitigations & Amplifications:**
* *Mitigated Memory Allocs:* 2 instances
* *Amplified Cascading Flux:* 177 instances
* *Memory Alloc (weighted view):* 2
* *State Mutation (weighted view):* 581
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 200`, `structural_boundaries: 208`, `args: 80`, `func_start: 80`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 11`, `state_mutation: 227`, `dead_code: 1`, `planned_debt: 2`
* *Architecture:* `api: 46`, `import: 17`
* *Defense:* `safety: 54`, `doc: 128`, `cleanup: 5`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 0.181
  * `Choke Point (Betweenness):` 2.2e-05 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 7):` $this->_resource->getTableName($prefix, Magento\Eav\Model\Entity\Attribute\AbstractAttribute, Magento\Eav\Model\Entity\Attribute\Backend\AbstractBackend, Magento\Eav\Model\Entity\Attribute\Frontend\AbstractFrontend, Magento\Eav\Model\Entity\Attribute\Source\AbstractSource, Magento\Eav\Model\Entity\Attribute\UniqueValidationInterface, Magento\Eav\Model\ResourceModel\Attribute\DefaultEntityAttributes\ProviderInterface, Magento\Framework\App\Config\Element...
  * `Imported By (In-Degree: 4):` (Excluded from Brief to save tokens)

### `app/code/Magento/Fedex/Model/Carrier.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1101.72 | **LOC:** 1884 | **CtrlFlow:** 15.2% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (35.6135%), Tech Debt (8.7603%)
**Top Internal Functions/Classes:**
  * `processTrackingDetails` (Impact: 38.0)
    * *Intent:* /** * Parse track details response from Fedex * * @param array $trackInfo * @return array * @Suppres...
  * `_formShipmentRequest` (Impact: 31.7)
    * *Intent:* /** * Form array with appropriate structure for shipment request * * @param \Magento\Framework\DataO...
  * `setRequest` (Impact: 25.4)
    * *Intent:* /** * Prepare and set request to this instance * * @param RateRequest $request * @return $this * @Su...
  * `getContainerTypes` (Impact: 24.6)
    * *Intent:* /** * Return container types of carrier * * @param \Magento\Framework\DataObject|null $params * * @r...
  * `_prepareRateResponse` (Impact: 19.6)
    * *Intent:* /** * Prepare shipping rate result based on response * * @param mixed $response * @return Result * @...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 196 instances
* *State Mutation (weighted view):* 635
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 194`, `structural_boundaries: 151`, `args: 45`, `func_start: 45`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 26`, `state_mutation: 243`, `fragile_debt: 1`
* *Architecture:* `api: 27`, `import: 15`
* *Defense:* `safety: 57`, `doc: 70`, `immutability_locks: 9`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 0.043
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 8):` 'ADULT' => __('Adult'), 'DIRECT' => __('Direct'), 'DROPOFF_AT_FEDEX_LOCATION' => __('DropOff at Fedex Location'), 'INDIRECT' => __('Indirect'), 'KG' => __('Kilograms'), 'ON_CALL' => __('On Call'), 'PACKAGE_RETURN_PROGRAM' => __('Package Return Program'), 'REGULAR_STOP' => __('Regular Stop')...
  * `Imported By (In-Degree: 2):` (Excluded from Brief to save tokens)

### `app/code/Magento/Catalog/Model/Product.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1074.54 | **LOC:** 2859 | **CtrlFlow:** 13.1% | **Authorship Centralization:** 50.0%
- **Risk Profile:** Cognitive Load (43.6687%), Tech Debt (8.6815%)
**Top Internal Functions/Classes:**
  * `beforeSave` (Impact: 24.1)
    * *Intent:* /** * Check product options and type options and save them, too * * @return void * @SuppressWarnings...
  * `getIdentities` (Impact: 13.7)
    * *Intent:* /** * Get identities * * @return array * @SuppressWarnings(PHPMD.CyclomaticComplexity) */
  * `getMediaGalleryImages` (Impact: 11.3)
    * *Intent:* /** * Retrieve media gallery images * * @return \Magento\Framework\Data\Collection */
  * `getAttributes` (Impact: 9.5)
    * *Intent:* /** * Retrieve product attributes * * If $groupId is null - retrieve all product attributes * * @par...
  * `__toArray` (Impact: 9.0)
    * *Intent:* //phpcs:disable PHPCompatibility.FunctionNameRestrictions.ReservedFunctionNames.MethodDoubleUndersco...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 123 instances
* *State Mutation (weighted view):* 450
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 178`, `structural_boundaries: 377`, `args: 165`, `func_start: 163`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 16`, `state_mutation: 204`, `planned_debt: 3`
* *Architecture:* `api: 157`, `import: 13`
* *Defense:* `safety: 17`, `doc: 224`, `immutability_locks: 4`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 4.708
  * `Choke Point (Betweenness):` 3.4e-05 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 8):` Magento\Catalog\Api\CategoryRepositoryInterface, Magento\Catalog\Api\Data\ProductAttributeMediaGalleryEntryInterface, Magento\Catalog\Api\Data\ProductInterface, Magento\Catalog\Api\ProductLinkRepositoryInterface, Magento\Catalog\Model\Product\Attribute\Backend\Media\EntryConverterPool, Magento\Catalog\Model\Product\Attribute\Source\Status, Magento\Catalog\Model\Product\Configuration\Item\Option\OptionInterface, Magento\Framework\Api\AttributeValueFactory...
  * `Imported By (In-Degree: 516):` (Excluded from Brief to save tokens)

### `app/code/Magento/Sales/Model/Order/Payment.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1037.54 | **LOC:** 2618 | **CtrlFlow:** 10.0% | **Authorship Centralization:** 80.0%
- **Risk Profile:** Cognitive Load (34.842%), Tech Debt (9.3378%)
**Top Internal Functions/Classes:**
  * `__construct` (Impact: 32.6)
    * *Intent:* * @param \Magento\Sales\Model\Order\CreditmemoFactory $creditmemoFactory * @param PriceCurrencyInter...
  * `updateOrder` (Impact: 30.3)
    * *Intent:* /** * Set appropriate state to order or add status to order history * * @param Order $order * @param...
  * `_void` (Impact: 22.4)
    * *Intent:* /** * Void payment either online or offline (process void notification) * NOTE: that in some cases a...
  * `processAction` (Impact: 22.1)
    * *Intent:* /** * Perform actions based on passed action name * * @param string $action * @param Order $order * ...
  * `refund` (Impact: 21.8)
    * *Intent:* /** * Refund payment online or offline, depending on whether there is invoice set in the creditmemo ...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 99 instances
* *State Mutation (weighted view):* 339
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 132`, `structural_boundaries: 375`, `args: 177`, `func_start: 177`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 11`, `state_mutation: 141`, `dead_code: 1`, `planned_debt: 5`
* *Architecture:* `api: 160`, `import: 11`
* *Defense:* `safety: 11`, `doc: 198`, `immutability_locks: 4`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 0.354
  * `Choke Point (Betweenness):` 3e-06 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 10):` $amount, $amount)
    
        return $this->orderPaymentProcessor->authorize($this, $invoice, $isOnline, $skipFraudDetection, $skipFraudDetection = false)
    
        return $this->orderPaymentProcessor->registerCaptureNotification($this, Magento\Framework\App\ObjectManager, Magento\Framework\Pricing\PriceCurrencyInterface...
  * `Imported By (In-Degree: 48):` (Excluded from Brief to save tokens)

### `app/code/Magento/ConfigurableProduct/Model/Product/Type/Configurable.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1021.34 | **LOC:** 1688 | **CtrlFlow:** 18.5% | **Authorship Centralization:** 80.0%
- **Risk Profile:** Cognitive Load (37.2131%), Tech Debt (8.3731%)
**Top Internal Functions/Classes:**
  * `__construct` (Impact: 69.2)
    * *Intent:* * @param \Magento\ConfigurableProduct\Model\ResourceModel\Product\Type\Configurable\Attribute\Collec...
  * `_prepareProduct` (Impact: 58.5)
    * *Intent:* /** * Prepare product and its configuration to be added to some products list. * Perform standard pr...
  * `saveConfigurableOptions` (Impact: 31.4)
    * *Intent:* /** * Save configurable product attributes * * @param ProductInterface $product * @return void * @th...
  * `beforeSave` (Impact: 19.3)
    * *Intent:* /** * Before save process * * @param \Magento\Catalog\Model\Product $product * @return $this * @Supp...
  * `save` (Impact: 19.2)
    * *Intent:* /** * Save configurable product depended data * * @param \Magento\Catalog\Model\Product $product * @...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 155 instances
* *State Mutation (weighted view):* 516
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 172`, `structural_boundaries: 175`, `args: 58`, `func_start: 56`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 5`, `state_mutation: 206`, `planned_debt: 1`
* *Architecture:* `api: 42`, `import: 15`
* *Defense:* `safety: 33`, `doc: 99`, `immutability_locks: 1`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 0.655
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 10):` $required, $required = true)
    
        return $this->_catalogProductTypeConfigurable->getChildrenIds($parentId, $requiredAttributeIds, $requiredAttributeIds = null
    ) 
        $collection = $this->getUsedProductCollection($product, $requiredAttributeIds = null)
    
        $metadata = $this->getMetadataPool()->getMetadata(ProductInterface::class, $skipStockFilter = true, $usedAttributes), 'image'...
  * `Imported By (In-Degree: 101):` (Excluded from Brief to save tokens)

### `app/code/Magento/Sales/Model/Order/Pdf/AbstractPdf.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 967.26 | **LOC:** 1170 | **CtrlFlow:** 21.4% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (49.9341%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `insertOrder` (Impact: 106.4)
    * *Intent:* /** * Insert order to pdf page. * * @param \Zend_Pdf_Page $page * @param \Magento\Sales\Model\Order ...
  * `correctText` (Impact: 39.8)
    * *Intent:* /** * Correct text. * * @param array $column * @param int $height * @param \Zend_Pdf_Resource_Font $...
  * `__construct` (Impact: 37.7)
    * *Intent:* * @param \Magento\Framework\Filesystem $filesystem * @param Config $pdfConfig * @param Total\Factory...
  * `correctLines` (Impact: 33.9)
    * *Intent:* /** * Correct lines. * * @param array $lines * @param \Zend_Pdf_Page $page * @param int $height * @t...
  * `drawLineBlocks` (Impact: 28.1)
    * *Intent:* * font_size int; font size (default 7) * align string; text align (also see feed parameter), optiona...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 167 instances
* *State Mutation (weighted view):* 547
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 146`, `structural_boundaries: 115`, `args: 31`, `func_start: 31`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 6`, `state_mutation: 213`, `dead_code: 2`
* *Architecture:* `api: 24`, `concurrency: 2`, `import: 7`
* *Defense:* `safety: 30`, `doc: 53`, `immutability_locks: 3`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.033
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 5):` Magento\Framework\App\Filesystem\DirectoryList, Magento\Framework\App\ObjectManager, Magento\Framework\File\Pdf\Image, Magento\MediaStorage\Helper\File\Storage\Database, Magento\Sales\Model\RtlTextHandler, Magento\Store\Model\ScopeInterface, Magento\Tax\Helper\Data, d)
     * feed         int...
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `app/code/Magento/Customer/Model/AccountManagement.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 953.48 | **LOC:** 1702 | **CtrlFlow:** 13.2% | **Authorship Centralization:** 100.0%
- **Risk Profile:** Cognitive Load (47.3345%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `__construct` (Impact: 224.8)
    * *Intent:* * @param SessionCleanerInterface|null $sessionCleaner * @param AuthorizationInterface|null $authoriz...
  * `createAccountWithPasswordHash` (Impact: 36.8)
    * *Intent:* /** * @inheritdoc * * @throws InputMismatchException * @SuppressWarnings(PHPMD.CyclomaticComplexity)...
  * `initiatePasswordReset` (Impact: 19.6)
    * *Intent:* /** * @inheritdoc */
  * `validateResetPasswordToken` (Impact: 11.6)
    * *Intent:* /** * Validate the Reset Password Token for a customer. * * @param int $customerId * @param string $...
  * `makeRequiredCharactersCheck` (Impact: 11.2)
    * *Intent:* /** * Check password for presence of required character sets * * @param string $password * @return i...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 114 instances
* *Amplified Sql Injection:* 1 instances
* *State Mutation (weighted view):* 395
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 119`, `structural_boundaries: 199`, `args: 49`, `func_start: 48`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 5`, `state_mutation: 167`
* *Architecture:* `api: 49`, `import: 52`
* *Defense:* `safety: 55`, `doc: 108`, `immutability_locks: 21`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 0.153
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 26):` $customer->getEmail(), $customer->getId(), $params), $requiredCharactersCheck
                ), Digits, Magento\Customer\Api\AccountManagementInterface, Magento\Customer\Api\AddressRepositoryInterface, Magento\Customer\Api\CustomerMetadataInterface...
  * `Imported By (In-Degree: 19):` (Excluded from Brief to save tokens)

### `app/code/Magento/Eav/Setup/EavSetup.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 932.02 | **LOC:** 1532 | **CtrlFlow:** 14.9% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (22.5588%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `__construct` (Impact: 35.9)
    * *Intent:* /** * Init * * @param ModuleDataSetupInterface $setup * @param Context $context * @param CacheInterf...
  * `installEntities` (Impact: 27.8)
    * *Intent:* /** * Install entities * * @param array $entities * @return $this * @SuppressWarnings(PHPMD.Cyclomat...
  * `_updateAttributeAdditionalData` (Impact: 25.0)
    * *Intent:* /** * Update Attribute Additional data * * @param int|string $entityTypeId * @param int|string $id *...
  * `addAttribute` (Impact: 24.8)
    * *Intent:* /** * Add attribute to an entity type * * If attribute is system will add to all existing attribute ...
  * `_updateAttribute` (Impact: 24.5)
    * *Intent:* /** * Update Attribute data * * @param int|string $entityTypeId * @param int|string $id * @param str...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 135 instances
* *Amplified Sql Injection:* 1 instances
* *State Mutation (weighted view):* 456
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 140`, `structural_boundaries: 138`, `args: 49`, `func_start: 49`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 186`
* *Architecture:* `api: 41`, `import: 13`
* *Defense:* `safety: 38`, `doc: 69`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 0.413
  * `Choke Point (Betweenness):` 1.7e-05 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 9):` Magento\Eav\Model\AttributeFactory, Magento\Eav\Model\Config, Magento\Eav\Model\Entity\Attribute, Magento\Eav\Model\Entity\Setup\Context, Magento\Eav\Model\Entity\Setup\PropertyMapperInterface, Magento\Eav\Model\ReservedAttributeCheckerInterface, Magento\Eav\Model\ResourceModel\Entity\Attribute\Group\CollectionFactory, Magento\Eav\Model\Validator\Attribute\Code...
  * `Imported By (In-Degree: 33):` (Excluded from Brief to save tokens)

### `setup/src/Magento/Setup/Model/Installer.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 926.38 | **LOC:** 1907 | **CtrlFlow:** 13.5% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (22.2601%), Tech Debt (8.2161%)
**Top Internal Functions/Classes:**
  * `handleDBSchemaData` (Impact: 61.5)
    * *Intent:* /** * Handle database schema and data (install/upgrade/backup/uninstall etc) * * @param SchemaSetupI...
  * `getSchemaDataHandler` (Impact: 27.7)
    * *Intent:* /** * Get handler for schema or data install/upgrade/backup/uninstall etc. * * @param string $module...
  * `install` (Impact: 17.8)
    * *Intent:* /** * Install Magento application * * @param \ArrayObject|array $request * @return void * @throws Fi...
  * `__construct` (Impact: 17.2)
    * *Intent:* * @param ObjectManagerProvider $objectManagerProvider * @param Context $context * @param SetupConfig...
  * `installOrderIncrementPrefix` (Impact: 17.0)
    * *Intent:* /** * Create store order increment prefix configuration * * @param string $orderIncrementPrefix Valu...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 138 instances
* *State Mutation (weighted view):* 484
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 156`, `structural_boundaries: 174`, `args: 55`, `func_start: 54`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 3`, `state_mutation: 208`, `planned_debt: 1`
* *Architecture:* `api: 32`, `import: 55`
* *Defense:* `safety: 51`, `doc: 106`, `immutability_locks: 12`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 0.094
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 15):` $paths, 'checkExtensions', Magento\Backend\Setup\ConfigOptionsList, Magento\Framework\App\Cache\Manager, Magento\Framework\App\Cache\Type\Config, Magento\Framework\App\DeploymentConfig, Magento\Framework\App\DeploymentConfig\Reader, Magento\Framework\App\DeploymentConfig\Writer...
  * `Imported By (In-Degree: 11):` (Excluded from Brief to save tokens)

### `app/code/Magento/Bundle/Model/Product/Type.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 894.54 | **LOC:** 1415 | **CtrlFlow:** 18.8% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (37.3956%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `__construct` (Impact: 61.5)
    * *Intent:* * @param \Magento\Bundle\Model\ResourceModel\Selection $bundleSelection * @param \Magento\Bundle\Mod...
  * `_prepareProduct` (Impact: 48.3)
    * *Intent:* /** * Prepare product and its configuration to be added to some products list. * * Perform standard ...
  * `checkSelectionsIsSale` (Impact: 23.4)
    * *Intent:* /** * Check if selection is salable * * @param \Magento\Bundle\Model\ResourceModel\Selection\Collect...
  * `getQty` (Impact: 20.8)
    * *Intent:* /** * Returns selection qty * * @param \Magento\Framework\DataObject $selection * @param int[] $qtys...
  * `beforeSave` (Impact: 20.1)
    * *Intent:* /** * Before save type related data * * @param \Magento\Catalog\Model\Product $product * @return $th...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 128 instances
* *State Mutation (weighted view):* 442
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 152`, `structural_boundaries: 134`, `args: 40`, `func_start: 40`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 18`, `state_mutation: 186`
* *Architecture:* `api: 31`, `import: 12`
* *Defense:* `safety: 32`, `doc: 75`, `immutability_locks: 1`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 0.313
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 7):` $isStrictProcessMode, $options)
    
        if (!$product->getSkipCheckRequiredOption() && $isStrictProcessMode) 
            foreach ($optionsCollection->getItems(), $optionsCollection, $required, $required = true)
    
        return $this->_bundleSelection->getChildrenIds($parentId, Magento\Bundle\Model\Option, Magento\Bundle\Model\ResourceModel\Option\AreBundleOptionsSalable, Magento\Bundle\Model\ResourceModel\Option\Collection...
  * `Imported By (In-Degree: 34):` (Excluded from Brief to save tokens)

### `dev/tests/api-functional/testsuite/Magento/Catalog/Api/ProductRepositoryInterfaceTest.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 869.9 | **LOC:** 2340 | **CtrlFlow:** 4.1% | **Authorship Centralization:** 50.0%
- **Risk Profile:** Cognitive Load (37.1062%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `testSaveDesign` (Impact: 15.7)
    * *Intent:* /** * Test design settings authorization * * @magentoApiDataFixture Magento/User/_files/user_with_cu...
  * `updateProduct` (Impact: 15.5)
    * *Intent:* /** * Update product * * @param array $product * @param string|null $token * @return array|bool|floa...
  * `saveProduct` (Impact: 15.4)
    * *Intent:* /** * Save Product * * @param $product * @param string|null $storeCode * @param string|null $token *...
  * `testGetListWithFilteringByStore` (Impact: 13.7)
    * *Intent:* /** * @magentoApiDataFixture Magento/Catalog/_files/products_with_websites_and_stores.php * @param a...
  * `testGetList` (Impact: 8.9)
    * *Intent:* /** * Test getList() method * * @magentoApiDataFixture Magento/Catalog/_files/product_simple.php */
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 80 instances
* *State Mutation (weighted view):* 537
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 70`, `structural_boundaries: 154`, `args: 67`, `func_start: 66`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 12`, `state_mutation: 377`, `unreferenced_by_name: 44`
* *Architecture:* `io: 1`, `api: 46`, `import: 35`
* *Defense:* `safety: 37`, `doc: 97`, `test: 109`, `immutability_locks: 6`, `cleanup: 10`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 0.027
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 23):` Magento\Authorization\Model\Role, Magento\Authorization\Model\RoleFactory, Magento\Authorization\Model\Rules, Magento\Authorization\Model\RulesFactory, Magento\CatalogInventory\Api\Data\StockItemInterface, Magento\Catalog\Api\Data\ProductInterface, Magento\Catalog\Model\Product\Gallery\DefaultValueProcessor, Magento\Catalog\Model\ResourceModel\Product\Gallery...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `app/code/Magento/Paypal/Model/Config.php` (PHP | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 833.32 | **LOC:** 1872 | **CtrlFlow:** 18.9% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (12.5718%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `_getSpecificConfigPath` (Impact: 39.0)
    * *Intent:* /** * Map any supported payment method into a config path by specified field name * * @param string ...
  * `isMethodAvailable` (Impact: 33.3)
    * *Intent:* /** * Check whether method available for checkout or not * * Logic based on merchant country, method...
  * `_mapWpukFieldset` (Impact: 28.4)
    * *Intent:* /** * Map PayPal Website Payments Pro common config fields * * @param string $fieldName * @return st...
  * `_mapExpressFieldset` (Impact: 28.1)
    * *Intent:* /** * Map PayPal Express config fields * * @param string $fieldName * @return string|null * @Suppres...
  * `_getDynamicImageUrl` (Impact: 23.8)
    * *Intent:* /** * Dynamic PayPal image URL getter * * Also can render dynamic Acceptance Mark * * @param string ...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 77 instances
* *State Mutation (weighted view):* 252
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 229`, `structural_boundaries: 158`, `args: 61`, `func_start: 61`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 14`, `state_mutation: 98`
* *Architecture:* `api: 92`, `import: 4`
* *Defense:* `safety: 1`, `doc: 102`, `immutability_locks: 42`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 0.421
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 3):` 'token' => $token], 
    public const REQUIRE_BILLING_ADDRESS_NO = 0, 
    public function getRequireBillingAddressOptions()
    
        return [
            self::REQUIRE_BILLING_ADDRESS_ALL => __('Yes'), Formatter, Magento\Csp\Helper\CspNonceProvider, Magento\Framework\App\ObjectManager, Magento\Payment\Helper\Formatter, _BILLING_ADDRESS_ALL = 1...
  * `Imported By (In-Degree: 52):` (Excluded from Brief to save tokens)

## 13. ARCHITECTURAL DRIFT ANOMALIES & ANTI-PATTERNS
> **AI CONTEXT:** Pay close attention to 'Anti-Pattern' files. These files blend in globally (Low Global Drift), but heavily violate the standard conventions of their native programming language (High Local Drift). 'Mixed-Responsibility' files sit perfectly between two global archetypes (Delta <= 0.9 IQR), indicating a violation of the Single Responsibility Principle.

*No highly conflicted/drifting files detected within the 0.9 IQR threshold.*

## 13.5 STRATEGIC REFACTORING TARGETS (Volatility & Authorship Centralization)
> **AI CONTEXT:** Use these intersections to recommend pragmatic next steps. Risk is exponentially worse when combined with high churn (frequent edits) or high authorship centralization (single points of failure).

### 👤 Key Person Dependencies (High Impact + Siloed Knowledge)
These are massive, load-bearing files written almost entirely by a single developer. They represent severe 'Bus Factor' risk.

- `app/code/Magento/Ups/Model/Carrier.php` -> **Rajesh Kumar** (100.0% isolated ownership) | Magnitude: 2209.42
- `app/code/Magento/CatalogImportExport/Model/Import/Product.php` -> **Rajesh Kumar** (100.0% isolated ownership) | Magnitude: 2056.3
- `app/code/Magento/Sales/Model/Order.php` -> **Rajesh Kumar** (100.0% isolated ownership) | Magnitude: 1652.06
- `app/code/Magento/Catalog/Model/ResourceModel/Product/Collection.php` -> **Rajesh Kumar** (100.0% isolated ownership) | Magnitude: 1505.56
- `app/code/Magento/CatalogImportExport/Model/Import/Product/Option.php` -> **Rajesh Kumar** (100.0% isolated ownership) | Magnitude: 1499.44

## 13.8 SYSTEMIC NETWORK BOTTLENECKS (N-Dimensional Topology)
> **AI CONTEXT:** These metrics cross-multiply Network Graph Theory against Risk Exposure to identify the exact mechanisms of runtime failure.

### ☣️ Cascading State Flux (Betweenness * State Flux)
These files act as structural bridges between components, but possess highly volatile, mutating state. They cause unpredictable side-effects for all downstream consumers.

- `app/code/Magento/Catalog/Model/ResourceModel/Product/Collection.php` -> **Severity: 0.024** (Bridge: 0.0002 * Flux: 100.0%)
- `app/code/Magento/Catalog/Model/ResourceModel/Category.php` -> **Severity: 0.02** (Bridge: 0.0002 * Flux: 99.9999%)
- `app/code/Magento/CatalogGraphQl/DataProvider/Product/SearchCriteriaBuilder.php` -> **Severity: 0.019** (Bridge: 0.0002 * Flux: 99.9999%)
- `app/code/Magento/Catalog/Model/Attribute/ScopeOverriddenValue.php` -> **Severity: 0.016** (Bridge: 0.0002 * Flux: 100.0%)
- `app/code/Magento/Store/Model/Store.php` -> **Severity: 0.014** (Bridge: 0.0002 * Flux: 85.0%)

### 🙈 Opaque Critical Nodes (Dependency Blast Radius * Doc Risk)
These are 'Core Architecture Nodes' that the entire ecosystem relies upon, but they lack human intent, documentation, or ownership metadata. Modifying them is flying blind.

- `app/code/Magento/Webapi/Model/Soap/Fault.php` -> **Severity: 19.1** (Blast Radius: 0.955 * Doc Risk: 20.0%)
- `dev/tools/grunt/configs/less.js` -> **Severity: 17.9** (Blast Radius: 0.179 * Doc Risk: 100.0%)
- `app/code/Magento/Integration/Api/Data/UserToken.php` -> **Severity: 10.2** (Blast Radius: 0.153 * Doc Risk: 66.6667%)
- `dev/tests/integration/testsuite/Magento/GraphQlCache/Controller/AbstractGraphqlCacheTest.php` -> **Severity: 9.303** (Blast Radius: 0.142 * Doc Risk: 65.5172%)
- `app/code/Magento/Integration/Api/Exception/UserTokenException.php` -> **Severity: 8.6** (Blast Radius: 0.172 * Doc Risk: 50.0%)

## AI SYSTEM INSTRUCTIONS (OUTPUT FORMAT)
> **CRITICAL TONE DIRECTIVE:** Stay in the Senior Technical Storyteller persona from Section 1. Use grounded, professional software engineering terminology (e.g., coupling, cohesion, technical debt, single responsibility) woven into a cohesive narrative -- not a dry, disconnected bullet-point audit. DO NOT use sci-fi, dramatic, or sensational jargon (e.g., 'Trojan', 'violently violates', 'parasitic', 'chimeric'). Be objective and factual, but write like you're explaining the codebase to a colleague, not filing a verdict.
> **When the user asks for an architectural review, structure your response using these directives:**
> 1. **Information Flow & Purpose (The Executive Summary):** Synthesize the overarching purpose of the codebase. Trace the information flow by analyzing the Top Dependencies ('Imports' and 'Imported By') and the Language Composition. Explain how the system's archetype drives its design, but only mention Z-Score deviations if they are highly abnormal.
> 2. **Notable Structures & Architecture:** Discuss the architecture based on the Dependency Graph. Identify the foundational load-bearers (highest inbound connections) versus the fragile orchestrators (highest outbound imports).
> 3. **Security & Vulnerabilities:** Immediately surface any critical threats flagged in the `AI THREAT INTELLIGENCE (XGBoost)` section. If none exist, briefly confirm the repository is secure from recognized structural threats.
> 4. **Outliers & Extremes:** Focus strictly on statistical anomalies. Highlight files or directory groups with massive Cumulative Risk, severe Z-Scores (Architectural Drift), or extreme spikes in individual risk vectors (like State Flux or Cognitive Load). Ignore normal, healthy code.
> 5. **Recommended Next Steps (Refactoring for Stability):** Provide 2-3 highly specific, pragmatic suggestions focused strictly on reducing outliers. Instruct the user on how to refactor high Z-score files, decouple massive central nodes, or mitigate extreme risk exposures to stabilize the system's architecture.
